2apl/resources/tests/Bad/Cyclic Inclusion/another.2apl
Include: agent.2apl
